--- a/requirements.txt
+++ b/requirements.txt
@@ -36,3 +36,19 @@ pdfplumber>=0.9.0
 pymongo>=4.6.0
 motor>=3.3.0
 
+# AWS Services
+boto3>=1.34.0
+botocore>=1.34.0
+
+# Authentication & Security
+bcrypt>=4.1.0
+PyJWT>=2.8.0
+
+# Data Processing & File Handling
+pandas>=2.0.0
+openpyxl>=3.1.0
+werkzeug>=3.0.0
+
+# HTTP Client
+requests>=2.31.0
+
